# kashe-sol-program

./: .gitignore  Anchor.toml  Anchor.toml.dev  Anchor.toml.prod  CLAUDE.md  Cargo.toml  README.md  failed-deploy.txt  failed-deploy2.txt  kasheNowYDwjQ5E95PhnFpR8jMd8daG5CCyAjttjXHD.json  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  pump.txt  recovered-keypair-fail2.json  recovered-keypair2.json  tsconfig.json
programs/token-2022-kashe/: Cargo.toml
programs/token-2022-kashe/src/: consts.rs  error.rs  lib.rs
programs/token-2022-kashe/src/events/: bonding_curve.rs  liquidity.rs  mod.rs  pool.rs
programs/token-2022-kashe/src/instructions/: add_liquidity.rs  buy.rs  create_pool.rs  initialize.rs  mod.rs  remove_liquidity.rs  sell.rs  withdraw.rs  withdraw_fees.rs
programs/token-2022-kashe/src/states/: bonding_curve.rs  initialize_configuration.rs
programs/token-2022-kashe/src/utils/: calc_swap_quote.rs
programs/token-2022-pumpfun/src/: lib.rs
programs/token-2022-pumpfun/src/events/: bonding_curve.rs
programs/token-2022-pumpfun/src/instructions/: add_liquidity.rs  buy.rs  create_pool.rs  initialize.rs  remove_liquidity.rs  sell.rs
programs/token-2022-pumpfun/src/states/: initialize_configuration.rs  mod.rs
scripts/: bonding-curve-info.ts  check-balance.ts  gptest-bu.ts  gptest.ts  kashe-prod.ts  kashe-stage.ts  kashe.ts  raydium-create-pool.ts  raydium-info.ts  raydium-tester.ts  read-token-metadata.ts  scratch.js  withdraw-fees.ts
tests/: token-2022-pumpfun.js  token-2022-pumpfun.ts
tests/keys/: mekey.json  user1.json
(+1 files in other folders)
