[package]
name = "token-2022-kashe"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022_kashe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"]}

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1